--- a/ramadan-appeal.html
+++ b/ramadan-appeal.html
@@ -55,8 +55,9 @@
                             <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown04">
-                                <a class="dropdown-item" href="about-our-trust.html">About Our Trust</a>
-                                <a class="dropdown-item" href="vision-mission">Vision, Mission</a>
+                                <a class="dropdown-item" href="about-our-trust.html">About Us</a>
+                                <a class="dropdown-item" href="vision-mission.html">Vision & Mission</a>
+                                <a class="dropdown-item" href="values.html">Values</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -124,7 +125,7 @@
                             <a href="javascript:void(0)" class="link-thumbnail">
                                 <img src="img/ramadan-appeal.jpeg" alt="Image placeholder" class="img-fluid" />
                             </a>
-                            
+
                             <div class="row">
                                 <div class="col-md-6 form-group">
                                     <input type="submit" value="Donate Now" class="btn btn-primary" />
@@ -142,38 +143,38 @@
                                     <div class="col-md-12 form-group">
                                         <label for="name">
                                             <b><i>FEED a family this Ramadan</i></b><br><br>
-                                            <i>Ramadan is on the doorstep. There are hundreds of widow headed poor families
+                                            <i>Ramadan is on the doorstep. There are hundreds of widow headed poor
+                                                families
                                                 waiting for us and your support to deliver the ration kits.
                                                 Your generosity and  support can provide SUHOOR and IFTAR to the poor
                                                 families.<br><br>
-                                            We have a target to deliver a ration kit to 1000 families this Ramadan.<b> InShaAllah <br></b></i><br>
+                                                We have a target to deliver a ration kit to 1000 families this
+                                                Ramadan.<b> InShaAllah <br></b></i><br>
                                             <b>We need your help</b> 🙏<br>
                                             1 Ration Kit 📦=  <b>₹ 2500/-</b><br><br>
                                             <b>Our beloved Prophet Muhammad ﷺ said:</b><br>
                                             <i>“Whoever gives food to a fasting person with which to break his fast will
-                                            have a reward like without deracting from the reward of fasting person in
-                                            the slighestest.”</i><br>
+                                                have a reward like without deracting from the reward of fasting person
+                                                in
+                                                the slighestest.”</i><br>
                                             ―(Al Tirmidhi ) <br><br>
                                             Donate you Zakat & Sadaqah. <br>
                                             <b>Donate Generously to
-                                            United Peace Foundation</b><br>
+                                                United Peace Foundation</b><br>
                                             Bank Name - ICICI BANK <br>
                                             Account Number - 141205000918 <br>
                                             IFSC code - ICIC0001412 <br>
-                                            <b>Note:</b> This A/C does not accept the foreign transaction and transaction from
+                                            <b>Note:</b> This A/C does not accept the foreign transaction and
+                                            transaction from
                                             NRI A/C. <br><br>
                                             <b>Find the Scanner Below</b> 👇
                                             <p>Merchant Name : M/S.UNITED PEACE FOUNDATION<br>
                                                 <span>UPI ID - <b>8825139198.eazypay@icici</b></span>
                                             </p>
                                             <p class="element-animate" data-animate-effect="fadeIn">
-                                                <img
-                                                  src="img/upi.jpeg"
-                                                  alt="Image placeholder"
-                                                  class=""
-                                                  width="250px" height="250px"
-                                                />
-                                              </p>
+                                                <img src="img/upi.jpeg" alt="Image placeholder" class="" width="250px"
+                                                    height="250px" />
+                                            </p>
                                         </label>
                                     </div>
                                 </div>
@@ -235,12 +236,13 @@
                 <div class="col-md-4 mb-5">
                     <h3>Get In Touch</h3>
                     <ul class="list-unstyled footer-link footer-content">
-              <li class="d-flex">
-                  <a href="https://www.google.com/maps/place/United+Peace+Foundation/@22.8419924,86.1944603,17z/data=!4m14!1m7!3m6!1s0x39f5e38dfe795257:0x285b399e76600865!2sUnited+Peace+Foundation!8m2!3d22.8417228!4d86.1965133!16s%2Fg%2F11khsljlw7!3m5!1s0x39f5e38dfe795257:0x285b399e76600865!8m2!3d22.8417228!4d86.1965133!16s%2Fg%2F11khsljlw7?entry=ttu" target="_blank" class="d-flex text-white" style="text-decoration: none;">
-                      <span class="mr-3 fa fa-location-arrow"></span>
-                      <span>Zakir Nagar, Mango, Jamshedpur</span>
-                  </a>
-              </li>
+                        <li class="d-flex">
+                            <a href="https://www.google.com/maps/place/United+Peace+Foundation/@22.8419924,86.1944603,17z/data=!4m14!1m7!3m6!1s0x39f5e38dfe795257:0x285b399e76600865!2sUnited+Peace+Foundation!8m2!3d22.8417228!4d86.1965133!16s%2Fg%2F11khsljlw7!3m5!1s0x39f5e38dfe795257:0x285b399e76600865!8m2!3d22.8417228!4d86.1965133!16s%2Fg%2F11khsljlw7?entry=ttu"
+                                target="_blank" class="d-flex text-white" style="text-decoration: none;">
+                                <span class="mr-3 fa fa-location-arrow"></span>
+                                <span>Atmos Tower, Kenddih Main Road, Kapali, Mango, Jamshedpur, Jharkhand 831012</span>
+                            </a>
+                        </li>
                         <li class="d-flex">
                             <span class="mr-3 fa fa-phone"></span><span class="text-white">+91 7463062868</span>
                         </li>
