--- a/values.html
+++ b/values.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
   <link rel="shortcut icon" href="img/upf-ico.ico">
-
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -51,7 +50,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="about-us.html" id="dropdown04" data-toggle="dropdown"
+              <a class="nav-link active dropdown-toggle" href="about-us.html" id="dropdown04" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">About</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
                 <a class="dropdown-item" href="about-our-trust.html">About Us</a>
@@ -69,11 +68,11 @@
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link active dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">Programme</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="orphan-sponsorship-programme.html">Orphan Sponsorship Programme</a>
-                <a class="dropdown-item" href="educational-programme.html">Educational Programme</a>
+                <a class="dropdown-item" href="orphan-sponsorship-programme.html">Sponsor An Orphan</a>
+                <a class="dropdown-item" href="educational-programme.html">Educational Programm</a>
                 <a class="dropdown-item" href="food-programme.html">Food Programme</a>
                 <a class="dropdown-item" href="emergency-relief-programme.html">Emergency Relief Programme</a>
               </div>
@@ -98,13 +97,13 @@
       <div class="container">
         <div class="row slider-text align-items-center">
           <div class="col-md-7 col-sm-12 element-animate">
-            <h1>Educational Programme</h1>
+            <h1>Our Values</h1>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb breadcrumb-custom">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="educational-programme.html">Programme</a></li>
+                <li class="breadcrumb-item"><a href="about-our-trust.html">About</a></li>
                 <li class="breadcrumb-item active" aria-current="page">
-                  Educational Programme
+                  Our Values
                 </li>
               </ol>
             </nav>
@@ -118,37 +117,81 @@
     <div class="container">
       <div class="row">
         <!-- <div class="col-md-4 order-2 sidebar">
-            <div class="sidebar-box">
-              <h3>About Our Trust</h3>
-              <ul class="list-unstyled sidelink">
-                <li class="active"><a href="#">History</a></li>
-                <li><a href="#">Leadership</a></li>
-                <li><a href="#">Mission</a></li>
-                <li><a href="#">Vision</a></li>
-                <li><a href="#">Support</a></li>
-              </ul>
-            </div>
-          </div> -->
+          <div class="sidebar-box">
+            <h3>About Our Trust</h3>
+            <ul class="list-unstyled sidelink">
+              <li class="active"><a href="#">History</a></li>
+              <li><a href="#">Leadership</a></li>
+              <li><a href="#">Mission</a></li>
+              <li><a href="#">Vision</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
+          </div>
+        </div> -->
         <div class="col-md-12 order-1 main mb-5">
           <div class="row">
             <div class="col-md-12">
-              <h2>Educational Programme</h2>
-              <p>
-                To uplift the deprived and underprivileged section of the society through education and make them
-                capable of living as respected, responsible human beings. By your kind love and support we provide
-                educational expenses of poor students and orphans living with their widowed mother or guardians.</p>
-              <p>
-                Intending to setup free educational institutions for poor students and launch various educational and
-                training programmes.</p>
-              <!-- <p class="element-animate" data-animate-effect="fadeIn">
-                    <img
-                      src="img/beautiful.jpg"
-                      alt="Image placeholder"
-                      class="img-fluid"
-                    />
-                  </p> -->
+              <h2>Our Values</h2>
+              <div class="row">
+                <div class="col-md-6">
+                  <ul>
+                    <li><b>Empowerment</b> - We believe in empowering individuals and communities to take control of
+                      their lives and futures through education, skills development, and access to resources.
+                    </li>
+
+                    <li><b>Inclusivity</b> - We are committed to inclusivity, ensuring that our programs and services
+                      are accessible and beneficial to people from all backgrounds, regardless of gender, caste,
+                      religion, or socioeconomic status.
+                    </li>
+
+                    <li><b>Transparency</b> - We are transparent in our operations, finances, and decision-making
+                      processes. We
+                      believe in accountability to our stakeholders, including donors, beneficiaries, and the
+                      communities we serve.
+                    </li>
+
+                    <li><b>Collaboration</b> - We value collaboration and partnership, working closely with local
+                      communities,
+                      NGOs, and other stakeholders to maximize our impact and effectiveness.
+                    </li>
+
+                    <li><b>Ethical Conduct</b> - We adhere to high ethical standards in all aspects of our work,
+                      including fundraising. Programme implementation, and advocacy. Integrity and honesty are the
+                      cornerstones of our organization.
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-md-6">
+                  <ul>
+                    <li><b>Community Engagement</b> - We believe in the importance of engaging with the communities we serve,
+                      seeking their input, feedback, and participation in decision-making processes. We strive to be
+                      responsive to their needs and priorities.
+                    </li>
+
+                    <li><b>Democratic</b> - We uphold democratic principles within our organization, fostering inclusivity,
+                      participation, and equal representation among all stakeholders.
+                    </li>
+
+                    <li><b>Non-political and Non-Governmental</b> - Our NGO maintains a strictly non-political stance,
+                      refraining from involvement with any political groups or parties. We operate independently from
+                      governmental influence or control, ensuring autonomy in our actions and decision-making processes.
+                    </li>
+
+                    <li><b>Non-communal</b> - Our work is guided by a commitment to inclusivity and unity, transcending
+                      religious, ethnic, or communal divides to serve all communities equally.
+                    </li>
+
+                    <li><b>Continuous Learning</b> - We are committed to continuous learning and improvement, embracing new ideas, technologies, and best practices to enhance the
+                      quality and effectiveness of our programs and services.</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
               <p class="element-animate" data-animate-effect="fadeIn">
-                <img src="img/programme/programme2.jpg" alt="Image placeholder" class="img-fluid" />
+                <img src="img/values1.jpg" alt="Image placeholder" class="img-fluid" />
               </p>
             </div>
           </div>
@@ -156,6 +199,8 @@
       </div>
     </div>
   </section>
+
+
   <section class="section-subscribe bg-light">
     <div class="container">
       <div class="row justify-content-center align-items-center">
