--- a/index.html
+++ b/index.html
@@ -534,11 +534,17 @@
         <div class="col-md-12 text-center"><br>
           <h2 class="text-uppercase heading mb-4">OUR MISSION</h2>
           <p class="mb-0 text-left">
-            Many vulnerable orphans and abandoned children are left on the streets begging for survival, need care and
-            support. To induct them into a society where they can get the chance to grow up in a loving and caring
-            environment. To provide nutritious food, quality education, healthcare and shelter for the homeless orphans
-            and poverty-stricken children. To help and uplift the destitute, widows and deprived section of the society
-            regardless of their faith, caste or creed.</p>
+            To address the plight of vulnerable orphans and abandoned children, we aim to provide them with the care and
+            support they urgently need. This involves offering a loving and nurturing environment where they can thrive
+            and grow.
+          </p>
+          <p class="mb-0 text-left">
+            Our mission extends beyond mere survival; we strive to integrate these children into society, offering them
+            opportunities for holistic development. This includes access to nutritious food, quality education,
+            healthcare, and shelter.
+            Furthermore, we are committed to uplifting destitute, widows and other deprived members or section of
+            society. Our assistance is provided irrespective of their gender, faith, caste, or creed, ensuring that no
+            one is left behind.</p>
           <p class="element-animate" data-animate-effect="fadeIn">
             <img src="img/mission.jpg" alt="Image placeholder" class="img-fluid" />
           </p>
@@ -663,7 +669,7 @@
             <h3>
               <span class="date"></span> "Name"
             </h3>
-            <img src="img/stories/story1.jpg" alt="Image placeholder" class="img-fluid" />
+            <img src="img/stories/story9.jpg" alt="Image placeholder" class="img-fluid" />
           </a>
         </div>
       </div>
@@ -752,9 +758,6 @@
               document.write(new Date().getFullYear());
             </script>
             All rights reserved
-            <!-- | This template is made with
-              <i class="fa fa-heart-o" aria-hidden="true"></i> by
-              <a href="https://bluenix.in" target="_blank">Bluenix</a> -->
           </p>
         </div>
         <div class="col-6 text-md-center text-left">
