--- a/stories.html
+++ b/stories.html
@@ -98,12 +98,12 @@
       <div class="container">
         <div class="row slider-text align-items-center">
           <div class="col-md-7 col-sm-12 element-animate">
-            <h1>Success Stories</h1>
+            <h1>Impact Stories</h1>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb breadcrumb-custom">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">
-                  Success Stories
+                  Impact Stories
                 </li>
               </ol>
             </nav>
@@ -157,7 +157,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <a href="javascript:void(0)" class="link-thumbnail">
+          <a href="bunty.html" class="link-thumbnail">
             <h3>
               <span class="date"></span> Bunty
             </h3>
