--- a/vision-mission.html
+++ b/vision-mission.html
@@ -133,13 +133,23 @@
           <div class="row">
             <div class="col-md-12">
               <h2>Our Mission</h2>
-              <p>
-                Many vulnerable orphans and abandoned children are left on the streets begging for survival, need care
-                and support. To induct them into a society where they can get the chance to grow up in a loving and
-                caring environment. To provide nutritious food, quality education, healthcare and shelter for the
-                homeless orphans and poverty-stricken children. To help and uplift the destitute, widows and deprived
-                section of the society regardless of their faith, caste or creed.
-              </p><!-- 
+              <p class="mb-0 text-left">
+                To address the plight of vulnerable orphans and abandoned children, we aim to provide them with the care
+                and
+                support they urgently need. This involves offering a loving and nurturing environment where they can
+                thrive
+                and grow.
+              </p>
+              <p class="mb-0 text-left">
+                Our mission extends beyond mere survival; we strive to integrate these children into society, offering
+                them
+                opportunities for holistic development. This includes access to nutritious food, quality education,
+                healthcare, and shelter.
+                Furthermore, we are committed to uplifting destitute, widows and other deprived members or section of
+                society. Our assistance is provided irrespective of their gender, faith, caste, or creed, ensuring that
+                no
+                one is left behind.</p>
+              <!-- 
                 <blockquote class="blockquote">
                   <p class="mb-0 text-black">
                     &ldquo;The best thing in life is when you love and are loved in return.&rdquo;
@@ -169,7 +179,7 @@
             <div class="col-md-12">
               <h2>Our Vision</h2>
               A world in which vulnerable orphans and deprived section of the society attain the right to survival,
-              protection and development with love, care and participation.
+              protection, development with love, care and participation.
               </p><!-- 
                 <blockquote class="blockquote">
                   <p class="mb-0 text-black">
