stories added and more to left

--- a/index.html
+++ b/index.html
@@ -649,19 +649,19 @@
       </div>
       <div class="row no-gutters">
         <div class="col-md-4 element-animate">
-          <a href="javascript:void(0)" class="link-thumbnail">
+          <a href="bunty.html" class="link-thumbnail">
             <h3>
-              <span class="date"></span> "Name"
+              <span class="date"></span> "Bunty"
             </h3>
-            <img src="img/stories/story3.jpg" alt="Image placeholder" class="img-fluid" />
+            <img src="img/stories/story5.jpg" alt="Image placeholder" class="img-fluid" />
           </a>
         </div>
         <div class="col-md-4 element-animate">
-          <a href="javascript:void(0)" class="link-thumbnail">
+          <a href="seema-lado.html" class="link-thumbnail">
             <h3>
-              <span class="date"></span> "Name"
+              <span class="date"></span> "Seema Kalandi"
             </h3>
-            <img src="img/stories/story2.jpg" alt="Image placeholder" class="img-fluid" />
+            <img src="img/stories/story1.jpg" alt="Image placeholder" class="img-fluid" />
           </a>
         </div>
         <div class="col-md-4 element-animate">
