--- a/stories.html
+++ b/stories.html
@@ -117,7 +117,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-12">
-          <a href="javascript:void(0)" class="link-thumbnail">
+          <a href="seema-lado.html" class="link-thumbnail">
             <h3>
               <span class="date"></span> Seema Kalandi
             </h3>
@@ -141,7 +141,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <a href="javascript:void(0)" class="link-thumbnail">
+          <a href="seema-lado.html" class="link-thumbnail">
             <h3>
               <span class="date"></span> Lado Kalandi
             </h3>
