--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <!-- pop-up content -->
   <div class="popup-container">
-    <div class="popup"> <a href="javascript:void(0)"><img src="img/10yrs-celeb.jpeg" /></a> </div>
+    <div class="popup"> <a href="javascript:void(0)"><img src="img/ramadan-popup.jpeg" /></a> </div>
   </div>
   <header role="banner">
     <a href="how-to-donate.html" class="donatenow-fixed">Donate Now</a>
